--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/Users/hinaho/Desktop/maternityheroes/style.css" />
+    <link rel="stylesheet" type="text/css" href="https://naho0201.github.io/maternityheroes/style.css" />
     <title>ホーム</title>
     <script src="main.js"></script>
 </head>
 
+<!-- /Users/hinaho/Desktop/maternityheroes/style.css -->
 
 <body>
     <header id="header">
