--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://naho0201.github.io/maternityheroes//Users/hinaho/Desktop/maternityheroes/style.css"/>
+    <link rel="stylesheet" href="https://naho0201.github.io/maternityheroes/.style.css"/>
 
     <title>ホーム</title>
    
@@ -14,6 +14,8 @@
 <!-- /Users/hinaho/Desktop/maternityheroes/style.css -->
 
 <body>
+
+
     <header id="header">
         <div class="inner">
             <ul class="navi">
