--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="{{https://naho0201.github.io/maternityheroes/}}" charset="utf-8"/>
-    <link rel="stylesheet" href="https://naho0201.github.io/maternityheroes/.style.css"/>
+    <link rel="stylesheet" href="https://naho0201.github.io/maternityheroes/style.css"/>
 
     <title>ホーム</title>
    
