--- a/index.html
+++ b/index.html
@@ -14,6 +14,200 @@
 
 <!-- /Users/hinaho/Desktop/maternityheroes/style.css -->
 
+<style>
+    /* ヘッダーCSS */
+
+li {
+    list-style: none;
+    /* padding: 10px; */
+    margin-left: 10vw;
+    margin-right: 10vw;
+    text-align: center;
+    /* リンクを中央寄せにする */
+}
+
+
+a {
+    color: black;
+    text-decoration: none;
+    font-weight: lighter;
+    display: inline-block;
+    /* リンクのテキストを中央揃えにする */
+    font-size: large;
+}
+
+@media screen and (max-width: 640px) {
+    a {
+        font-size: 15px;
+    }
+}
+
+
+
+.inner a:hover {
+    color: blue;
+    /* ホバー時の色を青に変更 */
+
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+    padding-inline-start: 0px;
+}
+
+
+header {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /* padding: 20px 40px; */
+    background: #cfcfcf;
+    box-sizing: border-box;
+}
+
+
+
+
+
+/*   body CSS*/
+
+body {
+    font-family: "DohgoMincho", serif;
+
+}
+
+h2 {
+    text-align: center;
+    margin-top: 160px;
+}
+
+
+/* 検索フォーム用CSS */
+
+.search-box {
+    position: relative;
+    text-align: center;
+    display: flex;
+    width: 40%;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    margin: 0 auto;
+    /* 左右の余白を自動的に設定して中央揃えにする */
+}
+
+
+
+.search-box input[type="text"] {
+    flex-grow: 1;
+    padding: 0.7rem 0 0.7rem 0.8rem;
+    border: 1px solid #cfcfcf;
+    border-radius: 1.5rem;
+    background-color: #cfcfcf;
+}
+
+
+.search-box input:focus {
+    outline: 0;
+    box-shadow: 0 0 10px #e1e1e1, 0 0 15px #e1e1e1, 0 0 20px #e1e1e1;
+}
+
+
+
+
+.baby {
+    width: 60%;
+    height: 60%;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+    display: flex;
+    /* flexbox を使用して要素を中央揃えにする */
+    justify-content: center;
+    /* 水平方向に中央揃えにする */
+    align-items: center;
+    /* 垂直方向に中央揃えにする */
+    margin-bottom: 60px;
+}
+
+
+/* テーブル用CSS レスポンス対応済み〜〜 */
+table {
+    border-collapse: collapse;
+    width: 80%;
+    margin: 0 auto;
+    /* 左右の余白を自動的に設定して中央揃えにする */
+    position: relative;
+    text-align: center;
+}
+
+td a {
+    color: black;
+    text-decoration: none;
+}
+
+td a:hover {
+    color: blue;
+    /* ホバー時の色を青に変更 */
+
+}
+
+
+.tb01 th,
+.tb01 td {
+    padding: 10px;
+    border: solid 1px #ccc;
+    text-align: center;
+    box-sizing: border-box;
+
+    border-right: none !important;
+    border-left: none !important;
+}
+
+.tb01 th {
+    background: #cfcfcf;
+}
+
+@media screen and (max-width: 640px) {
+    .tb01 .head {
+        display: none;
+    }
+
+    .tb01 {
+        width: 80%;
+        /* テーブルの幅を100%に設定 */
+    }
+
+    .tb01 th,
+    .tb01 td {
+        display: block;
+        width: 100%;
+        border-bottom: solid 1px #ccc;
+        /* 下部の境界線を追加 */
+        border-right: none !important;
+        border-left: none !important;
+        padding: 5px;
+        /* パディングを少し減らす */
+    }
+
+    .tb01 th:first-child,
+    .tb01 td:first-child {
+        background: #cfcfcf;
+        color: #fff;
+        font-weight: bold;
+    }
+
+    .tb01 tr:last-child {
+        border-bottom: none;
+        /* 最後の行の下部境界線を削除 */
+    }
+}
+
+
+</style>
+
 <body>
 
 
