--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <base href="{{https://naho0201.github.io/maternityheroes/}}" charset="utf-8"/>
     <link rel="stylesheet" href="https://naho0201.github.io/maternityheroes/style.css"/>
 
+
+    
+
     <title>ホーム</title>
    
 </head>
@@ -16,7 +19,7 @@
 
 
 
-</style>
+
 
 <body>
 
@@ -24,11 +27,11 @@
     <header id="header">
         <div class="inner">
             <ul class="navi">
-                <li><a href="/Users/hinaho/Documents/maternityheroes/serch/serch.html">口コミを探す</a></li>
+                <li><a href="https://truth-ink-dodo.glitch.me/">口コミを探す</a></li>
                 <li>
-                    <a href="/Users/hinaho/Documents/maternityheroes/info/info.html">情報を探す</a>
+                    <a href="https://glitch.com/edit/#!/maternity-find-info">情報を探す</a>
                 </li>
-                <li><a href="/Users/hinaho/Documents/maternityheroes/chat/chat.html">雑談する</a></li>
+                <li><a href="https://glitch.com/edit/#!/chatting-">雑談する</a></li>
             </ul>
             <div id="line_add_friends">
                 <p>ご興味のある妊婦さんは MaternityHereos LINE公式アカウントに、ぜひお友達登録ください</p>
